@@ -2139,6 +2139,14 @@ char *R_alloc(size_t nelem, int eltsize)
     else return NULL;
 }
 
+#include <stdint.h>
+long double *R_allocLD(size_t nelem)
+{
+    // This asumes 16-byte alignment suffices.
+    uintptr_t tmp = (uintptr_t) R_alloc(nelem + 1, sizeof(long double));
+    tmp = (tmp + 15) & ~0x0F;
+    return (long double *) tmp;
+}
 
 
 /* S COMPATIBILITY */
